--- a/Travel Site/home.html
+++ b/Travel Site/home.html
@@ -29,7 +29,16 @@
         </div> 
     </header>
     <dialog>
-        <p>Login</p>
+        <div class="modal-container">
+            <h1>Login</h1>
+            <label for="email" style="text-indent: 0.1em;">Email</label>
+            <input type="text" name="email" id="email">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
+            <a href="#">forgot the password?</a>
+            <button>Login</button>
+            <a href="#" id="sing-up">Sing Up now</a>
+        </div>
     </dialog>
     <div class="background-austria"> 
         <img src="src/img/pexels-rahat-m-1493088.jpg" alt="aldeia" id="aldeia">
